:lipstick: Fix copy palette being visible on room's events screen

--- a/src/styl/tags/room-events-editor.styl
+++ b/src/styl/tags/room-events-editor.styl
@@ -2,6 +2,7 @@ room-events-editor
     border-top 0 none
     display flex
     flex-direction column
+    z-index 11
     .tabs, button
         border-radius 0
     button
